# cmd-mox

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Makefile  README.md  conftest.py  pyproject.toml  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  ci.yml  coverage-main.yml  mutation-testing.yml  release.yml
.rules/: python-00.md  python-context-managers.md  python-pyproject.md  python-typing.md
cmd_mox/: __init__.py  _path_utils.py  _shim_bootstrap.py  _validators.py  command_runner.py  comparators.py  controller.py  environment.py  errors.py  expectations.py  fs_retry.py  ipc.py  passthrough.py  platform.py  pytest_plugin.py  shim.py  shimgen.py  test_doubles.py  verifiers.py
cmd_mox/ipc/: __init__.py  client.py  json_utils.py  models.py  server.py  socket_utils.py  win32.py  windows.py  windows_client.py  windows_server.py
cmd_mox/record/: __init__.py  env_filter.py  fixture.py  matching.py  replay.py  scrubber.py  session.py
cmd_mox/unittests/: _env_helpers.py  conftest.py  pytest_plugin_module_utils.py  test_command_double_record.py  test_command_double_replay.py  test_command_runner.py  test_controller.py  test_controller_basic.py  test_controller_env.py  test_controller_environment_manager.py  test_controller_handler.py  test_controller_lifecycle.py  test_controller_replay.py  test_controller_shim.py  test_env_filter.py  test_env_helpers.py  test_environment.py  test_expectations.py  test_fixture_file.py  test_fs_retry.py  test_invocation_journal.py  test_invocation_matcher.py  test_ipc_pipe_helpers.py  test_ipc_server.py  test_named_pipe_ipc.py  test_passthrough.py  test_passthrough_record.py  test_path_utils.py  test_pytest_plugin.py  test_pytest_plugin_module_utils_unit.py  test_recording_session.py  test_replay_session.py  test_retry_helpers.py  test_shim.py  test_shim_generation.py  test_spy_assertions.py  test_validators.py  test_verification_errors.py  test_verifier_helpers.py  test_windows_utils.py
docs/: adr-001-linting-architecture.md  cmd-mox-fake-capabilities-design.md  cmd-mox-roadmap.md  contents.md  developers-guide.md  documentation-style-guide.md  python-native-command-mocking-design.md  roadmap.md  shellmock-migration-guide.md  usage-guide.md  wsl-testing.md
docs/execplans/: 12-1-1-recording-session-class.md  12-1-2-fixture-file.md  12-1-3-add-record-method-to-command-double.md  12-2-1-implement-replay-session.md  12-2-2-invocation-matcher-with-strict-matching.md  12-2-3-add-replay-to-command-double.md  12-2-4-integrate-replay-into-cmd-mox-make-response.md  12-2-5-extend-cmd-mox-verify-to-report-unconsumed-recordings.md  7-1-1-recording-session-class.md  7-1-2-fixture-file.md  7-1-3-add-record-method-to-command-double.md  8-1-3-comparison-migration-guide-for-shellmock-users.md  idempotent-replay.md
examples/: _utils.py  test_mocks.py  test_passthrough_example.py  test_pipelines.py  test_spies.py  test_stubs.py
features/: command_double_record.feature  command_double_replay.feature  controller.feature  documentation.feature  order_verifier.feature  pytest_plugin.feature  recording_session.feature  replay_session.feature  windows_support.feature
features/steps/: steps_controller.py  steps_pytest_plugin.py
scripts/tests/: test_typos_rollout.py
src/: env.rs
tests/: helpers.py  test_command_double_record_bdd.py  test_command_double_replay_bdd.py  test_comparators.py  test_comparators_repr.py  test_controller_batch_args.py  test_controller_bdd.py  test_controller_helpers.py  test_documentation_bdd.py  test_ipc_behaviour.py  test_ipc_client_unit.py  test_ipc_client_windows_unit.py  test_ipc_json_utils.py  test_ipc_server_callbacks.py  test_ipc_socket_utils.py  test_named_pipe_server.py  test_order_verifier_bdd.py  test_parameters_helpers.py  test_platform_support.py  test_pytest_plugin_bdd.py  test_pytest_plugin_manager.py  test_pytest_plugin_worker_prefix.py  test_recording_session_bdd.py  test_replay_error.py  test_replay_session_bdd.py  test_run_cmd.py  test_shim_startup.py  test_shim_timeout.py  test_socket_probe.py  test_steps_assertions.py  test_stub_response_env.py  test_usage_guide_public_api.py  test_windows_environment.py  test_windows_support_bdd.py  test_workflow_contract.py
tests/helpers/: controller.py  docs.py  fixtures.py  parameters.py  pytest_plugin.py  pytest_typing.py
tests/helpers/data/: parallel_suite.py
tests/steps/: __init__.py  assertions.py  command_config.py  command_double_record.py  command_double_replay.py  command_execution.py  controller_replay.py  controller_setup.py  documentation.py  environment.py  journal.py  recording_session.py  replay_session.py  shim_management.py
